[gd_scene load_steps=4 format=3 uid="uid://c2nvantogdhxk"]

[ext_resource type="Script" path="res://scripts/card_display/character_cards/character_card_3d.gd" id="1_rvkly"]
[ext_resource type="PackedScene" uid="uid://pj3okss4lgka" path="res://scenes/card_display/character_cards/character_card_2d.tscn" id="2_shb1e"]

[sub_resource type="ViewportTexture" id="ViewportTexture_agnpc"]
viewport_path = NodePath("FrontViewport")

[node name="CharacterCard3D" type="Node3D"]
script = ExtResource("1_rvkly")

[node name="FrontSide" type="Sprite3D" parent="."]
unique_name_in_owner = true
texture = SubResource("ViewportTexture_agnpc")

[node name="BackSide" type="Sprite3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.01)

[node name="FrontViewport" type="SubViewport" parent="."]
unique_name_in_owner = true
canvas_item_default_texture_filter = 0
size = Vector2i(500, 850)

[node name="CharacterCard2D" parent="FrontViewport" instance=ExtResource("2_shb1e")]
unique_name_in_owner = true
offset_right = 0.0
offset_bottom = 0.0

[node name="BackViewport" type="SubViewport" parent="."]
unique_name_in_owner = true
canvas_item_default_texture_filter = 0
size = Vector2i(500, 850)
